Fix electric border alignment: set inner-container to absolute

--- a/css/style.css
+++ b/css/style.css
@@ -191,9 +191,12 @@ button {
 
 /* Inner container */
 .inner-container {
-    position: relative;
-    height: 100%;
+    position: absolute;
+    inset: 0;
     width: 100%;
+    height: 100%;
+    z-index: 1;
+    pointer-events: none;
 }
 
 /* Border layers */
